--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,7 @@ body{
     box-shadow: inset 0 0 1px #111;
     padding: 0 10px;
     border-radius: 3px;
+    scrollbar-width: none;
 }
 .chat-container .message{
     width: 100%;
@@ -125,4 +126,7 @@ body{
     max-width: 120px;
     cursor: pointer;
     color: rgb(81, 184, 243);
+}
+::-webkit-scrollbar{
+    display: none;
 }
